# BrS-P2R-strand-ORd2011model-withTNNP_INa-FT_IKr

./: Makefile.am  README
check_test/: in
src/: data_out.c  eular.c  exptable.c  input_para.c  mem.c  ord.c  ord.c.org  syspara.h  system.c  var_consts.c
